# agentchatbot_v0

./: .dockerignore  .gitignore  README.md  run-backend.sh
agent/: .env.example  README.md  pyproject.toml  requirements.txt
agent/src/: README.md  __init__.py  main.py
agent/src/agent_app/: __init__.py  main.py
agent/src/agent_app/core/: README.md  agent.py  config.py  llm.py  observability.py
agent/src/agent_app/graph/: __init__.py  react_graph.py
agent/src/agent_app/memory/: README.md  __init__.py  short_term.py
agent/src/agent_app/prompts/: README.md  __init__.py  system.py
agent/src/agent_app/tools/: README.md  __init__.py  legal.py  sample.py
agent/src/core/: __init__.py  agent.py  config.py  llm.py
agent/src/graph/: README.md  __init__.py  react_graph.py
agent/src/memory/: __init__.py
agent/src/prompts/: __init__.py  system.py
agent/src/tools/: README.md  __init__.py  law.py  sample.py
agent/tests/: test_agent_hardening.py  test_config.py  test_legal_tool.py  test_observability.py
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/scripts/: e2e_geosil.py  e2e_runservice_realgraph.py
backend/src/: README.md
backend/src/api/: README.md
backend/src/backend_app/: __init__.py  db.py
backend/src/backend_app/api/: __init__.py  app.py  run_manager.py
backend/src/backend_app/core/: container.py
backend/src/backend_app/repositories/: __init__.py  conversation.py
backend/src/backend_app/services/: retrieval.py  run_service.py
backend/src/core/: README.md
backend/src/repositories/: README.md
backend/src/schemas/: README.md
backend/src/services/: README.md
backend/tests/: test_api.py  test_approval_live.py  test_conversation_repo.py  test_do16_model_resolution_adversarial.py  test_finalize_guard_adversarial.py  test_interrupt_adversarial.py  test_interrupt_double_terminal_regression.py  test_migrations_dir.py  test_retrieval.py  test_run_service.py  test_run_service_persist.py  test_thread_admin.py
database/: README.md
database/graph/: README.md
database/migrations/: 0001_conversation_store.sql  0002_tool_call_id.sql  0003_interrupt_terminal.sql  0004_run_events.sql  0005_run_heartbeat.sql  0006_run_model.sql  0007_run_events_gc_index.sql  README.md
database/vector/: README.md
db-admin/: README.md  pyproject.toml  requirements.txt
db-admin/scripts/: build_delegation_cli.py  ingest_cli.py
db-admin/src/: README.md
db-admin/src/automation/: README.md
db-admin/src/db_admin/: __init__.py  lawgo_client.py
db-admin/src/db_admin/pipeline/: __init__.py  delegation_build.py  lawgo_ingest.py
db-admin/src/inspector/: README.md
db-admin/src/pipeline/: README.md
db-admin/tests/: test_delegation.py  test_resolve.py
deploy/: .env.example  docker-compose.app.yml  docker-compose.convstore.yml  docker-compose.langfuse.yml  docker-compose.yml
docs/: .bkit-memory.json  .pdca-status.json
docs/00-architecture/: agent-platform.md
docs/01-plan/features/: conversation-store.plan.md  db-layer.plan.md
docs/02-design/features/: conversation-store.design.md  db-layer.corpus-analysis.md  db-layer.design.md
docs/03-analysis/: conversation-store.analysis.md  db-layer.analysis.md
docs/04-report/features/: db-layer.report.md
frontend/: .env.example  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/docs/: README.md  codex-reference.md  pdca-plan-frontend.md  responsive-plan.md
frontend/src/: README.md  app.d.ts  app.html
frontend/src/app/: README.md
frontend/src/entities/: README.md
frontend/src/features/: README.md
frontend/src/pages/: README.md
frontend/src/routes/: +layout.svelte  (+2 more)
legal_core/: README.md  pyproject.toml
legal_core/src/legal_core/: __init__.py  ids.py  lawgo.py  repositories.py  retrieval.py  schemas.py  text.py
legal_core/tests/: test_ids.py  test_lawgo.py  test_retrieval_format.py  test_text.py
legal_infra/: README.md  pyproject.toml  requirements.txt
legal_infra/src/legal_infra/: __init__.py  embedding_flag.py  embedding_remote.py  graph_fuseki.py  provider.py  reranker_flag.py  vector_qdrant.py
legal_infra/tests/: test_embedding.py  test_embedding_flag.py  test_filter.py  test_graph_safety.py  test_integration.py  test_qdrant_hybrid.py
scripts/: dev-backend.sh  run_tests.sh
(+31 files in other folders)
